# lagrange-polynomial

./: .gitignore  .pylintrc  Makefile  README.md  setup.cfg  test.py
.github/workflows/: main.yml
lagrange_polynomial/: __init__.py  lagrange_polynomial.py
