[metadata]
name = lagrange-polynomial
version = 0.0.1
author = Fionn Fitzmaurice
description = Make Lagrange polynomials
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/fionn/lagrange-polynomial"
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha

[options]
zip_safe = true
pymodules = lagrange-polynomial
packages = find:
python_requires = >=3.7

[options.extras_require]
dev =
    pylint
    mypy
