[metadata]
name = lagrange_polynomial
version = attr: lagrange_polynomial.__version__
author = Fionn Fitzmaurice
description = Make Lagrange polynomials
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/fionn/lagrange-polynomial"
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha

[options]
zip_safe = false
pymodules = lagrange_polynomial
include_package_data = true
packages = find:
python_requires = >=3.9

[options.package_data]
* = py.typed

[options.extras_require]
dev =
    pylint
    mypy
    coverage
